Add .props and clean-up .csproj

--- a/CreativeCode.JWS.Tests/CreativeCode.JWS.Tests.csproj
+++ b/CreativeCode.JWS.Tests/CreativeCode.JWS.Tests.csproj
@@ -1,10 +1,10 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
-    <PropertyGroup>
-        <TargetFramework>net7.0</TargetFramework>
-        <ImplicitUsings>enable</ImplicitUsings>
-        <Nullable>enable</Nullable>
+    <Import Project="..\CreativeCode.JWS.props" />
 
+    <PropertyGroup>
+        <TargetFramework>net6.0</TargetFramework>
+        <ImplicitUsings>enable</ImplicitUsings>
         <IsPackable>false</IsPackable>
     </PropertyGroup>
 
@@ -19,7 +19,7 @@
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\JWS\CreativeCode.JWS.csproj" />
+        <ProjectReference Include="..\JWS\CreativeCode.JWS.csproj" />
     </ItemGroup>
 
 </Project>
